<resources>
    <string name="app_name">Bidding Market Simulator</string>

    <string name="action_settings">Settings</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="bidding_market_simulator">Bidding Market Simulator</string>
    <string name="choose_user">Go to Feed</string>
    <string name="item_title">Item Page</string>
    <string name="username">Username</string>
    <string name="EnterChat">EnterChat</string>
    <string name="welcome_onboarding">Welcome to Bidding Market Simulator!</string>
    <string name="bidding_market_simulator_onboarding">Bidding Market Simulator is a simple app that allows you to create a bidding market and bid on items.</string>
    <string name="bidding_market_simulator_onboarding2">Let\'s get you started!</string>
    <string name="search_feed">Search</string>
    <string name="min_bid">Min Bid</string>
    <string name="max_bid">Max Bid</string>
    <string name="money_count">0.00</string>
    <string name="current_balance_text">Your Balance</string>
    <string name="button_top_up">Top Up</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="wallet">Wallet</string>
    <string name="title_activity_wallet_topup">WalletTopupActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="goToProductView">go to product view</string>
    <string name="prodImgDesc">product image</string>
    <string name="bidHint">enter bid</string>
    <string name="bidButton">bid</string>
    <string name="prodViewPage">product view page</string>
    <string name="prodReviewButton">reviews</string>
    <string name="prodReviewPage">product review page</string>
    <string name="reviewHint">leave a detailed review here!</string>
    <string name="submitReview">submit</string>
    <string name="sellerProfileButton">view seller\'s profile</string>
    <string name="profilePage">profile page</string>
</resources>
