<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.srsys.presentation.HomeActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bidding_market_simulator"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMortarboard"
        android:src="@drawable/mortarboard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonFeed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonFeedOnClick"
            android:text="@string/choose_user" />

        <Button
            android:id="@+id/buttonProductView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonProductViewOnClick"
            android:text="@string/goToProductView"/>

    </LinearLayout>

</RelativeLayout>
