<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/productImage"
            android:src="@drawable/mortarboard"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/prodImgDesc"
            tools:background="#999"
            tools:srcCompat="@tools:sample/avatars" />
        <TextView
            android:id="@+id/productTitle"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="Product Title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <EditText
            android:inputType="textMultiLine"
            android:hint="@string/reviewHint"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:scrollbars="vertical" />

        <RatingBar
            android:id="@+id/simpleRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/submitReviewButton"
            android:onClick="submitReviewOnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="#ffffff"
            android:text="@string/submitReview"  />

    </LinearLayout>
</ScrollView>