<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/prodImgDesc"
            tools:background="#999"
            tools:srcCompat="@tools:sample/avatars" />
        <TextView
            android:id="@+id/productTitle"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="Product Title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:text="@tools:sample/lorem/random"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="32sp"
            tools:text="Current Bid: $1.99"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/bidAmount"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/bidHint"
            android:inputType="phone" />

        <Button
            android:id="@+id/bid_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="#ffffff"
            android:text="@string/bidButton"  />
    </LinearLayout>
</ScrollView>